--- a/package.json
+++ b/package.json
@@ -9,32 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tiptap/extension-code-block": "^2.11.6",
-    "@tiptap/extension-highlight": "^2.11.6",
-    "@tiptap/extension-placeholder": "^2.11.6",
-    "@tiptap/extension-task-item": "^2.11.6",
-    "@tiptap/extension-task-list": "^2.11.6",
-    "@tiptap/pm": "^2.11.6",
-    "@tiptap/react": "^2.11.6",
-    "@tiptap/starter-kit": "^2.11.6",
+    "@codemirror/lang-javascript": "^6.2.3",
+    "@codemirror/lang-python": "^6.1.7",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@uiw/codemirror-theme-dracula": "^4.23.10",
+    "@uiw/codemirror-theme-monokai": "^4.23.10",
+    "@uiw/codemirror-theme-nord": "^4.23.10",
+    "@uiw/codemirror-theme-solarized": "^4.23.10",
+    "@uiw/codemirror-theme-vscode": "^4.23.10",
+    "@uiw/react-codemirror": "^4.23.10",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.484.0",
     "next": "15.2.4",
+    "re-resizable": "^6.11.2",
     "react": "^19.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
-    "react-hot-toast": "^2.5.2",
-    "tailwind-merge": "^3.0.2"
+    "tailwind-merge": "^3.0.2",
+    "tw-animate-css": "^1.2.5",
+    "ui": "github:shadcn/ui"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-color": "^3.0.13",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.0.17",
     "typescript": "^5"
   }
 }
